--- a/package.json
+++ b/package.json
@@ -38,12 +38,15 @@
     "@types/cors": "^2.8.17",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.10.0",
+    "@types/supertest": "^2.0.12",
     "typescript": "^5.3.2",
     "ts-node": "^10.9.1",
     "rimraf": "^5.0.5",
     "jest": "^29.7.0",
     "@types/jest": "^29.5.8",
     "ts-jest": "^29.1.1",
+    "supertest": "^6.3.3",
+    "nock": "^13.4.0",
     "eslint": "^8.54.0",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0"
