feat(websocket): Implement comprehensive WebSocket server and mock event system
- Add WebSocketHandler for real-time mock data and WebSocket proxying
- Implement WebSocket configuration with environment variable support
- Create comprehensive WebSocket documentation and test client
- Add WebSocket event subscription and management features
- Integrate WebSocket server with main application startup
- Update configuration types and validation schemas
- Add example WebSocket client and mock event data
- Implement heartbeat monitoring and connection management
- Enhance README with WebSocket feature documentation
Closes #13 (WebSocket support task)

--- a/.env.example
+++ b/.env.example
@@ -100,6 +100,31 @@ LOG_MAX_SIZE=10485760
 LOG_MAX_FILES=10
 
 # =============================================================================
+# WEBSOCKET CONFIGURATION
+# =============================================================================
+# Enable WebSocket server
+WEBSOCKET_ENABLED=false
+
+# WebSocket server path
+WEBSOCKET_PATH=/ws
+
+# Mock events configuration (JSON array)
+# Example: [{"name":"ticker","interval":1000,"data":{"price":100}},{"name":"news","interval":5000,"data":{"title":"Breaking News"}}]
+WEBSOCKET_MOCK_EVENTS=[]
+
+# Enable WebSocket proxy
+WEBSOCKET_PROXY_ENABLED=false
+
+# WebSocket proxy routes (format: name:ws://url,name2:wss://url2)
+WEBSOCKET_PROXY_ROUTES=
+
+# Heartbeat interval in milliseconds (optional)
+WEBSOCKET_HEARTBEAT_INTERVAL=30000
+
+# Max payload size in bytes (optional)
+WEBSOCKET_MAX_PAYLOAD=10485760
+
+# =============================================================================
 # ADMIN ENDPOINTS
 # =============================================================================
 ADMIN_ENABLED=true
