--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "express-rate-limit": "^7.1.5",
-    "axios": "^1.6.2"
+    "axios": "^1.6.2",
+    "ws": "^8.14.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
@@ -39,6 +40,7 @@
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.10.0",
     "@types/supertest": "^2.0.12",
+    "@types/ws": "^8.5.8",
     "typescript": "^5.3.2",
     "ts-node": "^10.9.1",
     "rimraf": "^5.0.5",
