feat(recording): Implement comprehensive request recording and replay system
- Add new request recording configuration options in .env.example
- Create RecordingHandler to manage request/response recording
- Implement recording storage and management features
- Add documentation for request recording and replay functionality
- Create data/recordings directory for file-based storage
- Update configuration types and server initialization
- Mark request recording task as completed in project tasks
- Provide comprehensive configuration options for recording
- Support memory and file-based recording storage
- Enable selective recording with path and header filtering

--- a/.env.example
+++ b/.env.example
@@ -131,6 +131,33 @@ ADMIN_ENABLED=true
 ADMIN_AUTH_REQUIRED=false
 
 # =============================================================================
+# REQUEST RECORDING AND REPLAY
+# =============================================================================
+# Enable request recording feature
+RECORDING_ENABLED=false
+
+# Auto-record all requests (if false, use /admin/recording/start to begin)
+RECORDING_AUTO_RECORD=false
+
+# Maximum number of recordings to keep in memory
+RECORDING_MAX_RECORDINGS=1000
+
+# Storage type: memory | file
+RECORDING_STORAGE_TYPE=memory
+
+# Storage path for file-based storage
+RECORDING_STORAGE_PATH=./data/recordings
+
+# Paths to exclude from recording (comma-separated)
+RECORDING_EXCLUDE_PATHS=/admin,/dashboard,/health
+
+# Headers to include in recordings (comma-separated, empty = all)
+RECORDING_INCLUDE_HEADERS=content-type,authorization,user-agent
+
+# Headers to exclude from recordings (comma-separated)
+RECORDING_EXCLUDE_HEADERS=cookie,set-cookie
+
+# =============================================================================
 # DEVELOPMENT FEATURES
 # =============================================================================
 HOT_RELOAD=true
