--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "jsonwebtoken": "^9.0.2",
     "express-rate-limit": "^7.1.5",
     "axios": "^1.6.2",
-    "ws": "^8.14.2"
+    "ws": "^8.14.2",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
@@ -41,6 +42,7 @@
     "@types/node": "^20.10.0",
     "@types/supertest": "^2.0.12",
     "@types/ws": "^8.5.8",
+    "@types/uuid": "^9.0.7",
     "typescript": "^5.3.2",
     "ts-node": "^10.9.1",
     "rimraf": "^5.0.5",
