feat(database): Implement comprehensive database persistence for mock API server
- Add support for SQLite, PostgreSQL, and MongoDB database persistence
- Implement database service with unified CRUD operations across database types
- Create database configuration management in ConfigManager
- Add comprehensive environment variables for database configuration
- Integrate database service with MockDataHandler for persistent data storage
- Implement database health check and admin endpoints
- Create documentation for database persistence feature
- Update .env.example with detailed database configuration options
- Add database implementation summary documentation
- Mark database persistence task as completed in project tasks
Enables flexible, optional database storage for mock data with support for multiple database types and comprehensive configuration options.

--- a/.env.example
+++ b/.env.example
@@ -125,6 +125,39 @@ WEBSOCKET_HEARTBEAT_INTERVAL=30000
 WEBSOCKET_MAX_PAYLOAD=10485760
 
 # =============================================================================
+# DATABASE PERSISTENCE
+# =============================================================================
+# Enable database persistence for mock data
+DATABASE_ENABLED=false
+
+# Database type: sqlite | postgresql | mongodb
+DATABASE_TYPE=sqlite
+
+# SQLite Configuration (when DATABASE_TYPE=sqlite)
+DATABASE_SQLITE_FILENAME=./data/mock-data.db
+DATABASE_SQLITE_MEMORY=false
+
+# PostgreSQL Configuration (when DATABASE_TYPE=postgresql)
+DATABASE_PG_HOST=localhost
+DATABASE_PG_PORT=5432
+DATABASE_PG_DATABASE=mockapi
+DATABASE_PG_USERNAME=postgres
+DATABASE_PG_PASSWORD=your-password
+DATABASE_PG_SSL=false
+DATABASE_PG_POOL_SIZE=10
+
+# MongoDB Configuration (when DATABASE_TYPE=mongodb)
+DATABASE_MONGO_URI=mongodb://localhost:27017
+DATABASE_MONGO_DATABASE=mockapi
+DATABASE_MONGO_MAX_POOL=10
+DATABASE_MONGO_MIN_POOL=2
+DATABASE_MONGO_TIMEOUT=5000
+
+# Database options
+DATABASE_AUTO_MIGRATE=true
+DATABASE_SYNC_ON_STARTUP=true
+
+# =============================================================================
 # ADMIN ENDPOINTS
 # =============================================================================
 ADMIN_ENABLED=true
