--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
   "license": "MIT",
   "dependencies": {
     "@faker-js/faker": "^10.1.0",
+    "@graphql-tools/schema": "^10.0.0",
     "express": "^4.18.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "graphql": "^16.8.0",
     "winston": "^3.11.0",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
