docs(documentation): Add comprehensive start guide and update README
- Create new START_GUIDE.md with detailed initialization instructions
- Update README-SHORT.md with new quick start options and frontend links
- Add start-all.sh and start-all.bat scripts for easier project initialization
- Update package.json to support new startup scripts
- Provide clear, step-by-step guidance for project setup and usage
- Include troubleshooting and configuration details in documentation

--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "start": "node dist/index.js",
     "dev": "ts-node src/index.ts",
     "dev:watch": "ts-node --watch src/index.ts",
+    "dev:full": "npm run dev",
+    "start:full": "npm run build && npm start",
+    "open:dashboard": "node -e \"require('child_process').exec(process.platform === 'darwin' ? 'open' : process.platform === 'win32' ? 'start' : 'xdg-open' + ' http://localhost:3000/dashboard')\"",
+    "open:graphql": "node -e \"require('child_process').exec(process.platform === 'darwin' ? 'open' : process.platform === 'win32' ? 'start' : 'xdg-open' + ' http://localhost:3000/graphql')\"",
+    "open:websocket": "node -e \"require('child_process').exec(process.platform === 'darwin' ? 'open' : process.platform === 'win32' ? 'start' : 'xdg-open' + ' docs/websocket-test-client.html')\"",
     "clean": "rimraf dist",
     "prebuild": "npm run clean",
     "test": "jest",
